feat: editor task list

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -9,6 +9,7 @@
     <mona-editor-blockquote></mona-editor-blockquote>
     <mona-editor-link></mona-editor-link>
     <mona-editor-list></mona-editor-list>
+    <mona-editor-task-list></mona-editor-task-list>
     <mona-editor-indent></mona-editor-indent>
     <mona-editor-history></mona-editor-history>
     <mona-editor-horizontal-rule></mona-editor-horizontal-rule>
