feat: editor basic image insert + new font icon library

--- a/projects/mona-ui/src/lib/editor/components/editor-basic-text-styles/editor-basic-text-styles.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-basic-text-styles/editor-basic-text-styles.component.html
@@ -1,20 +1,20 @@
 <mona-button-group selection="multiple">
     <button monaButton [selected]="boldSelected()" (click)="onBoldToggle()" title="Bold">
-        <fa-icon [icon]="boldIcon"></fa-icon>
+        <i class="ri-bold"></i>
     </button>
     <button monaButton [selected]="italicSelected()" (click)="onItalicToggle()" title="Italic">
-        <fa-icon [icon]="italicIcon"></fa-icon>
+        <i class="ri-italic"></i>
     </button>
     <button monaButton [selected]="underlineSelected()" (click)="onUnderlineToggle()" title="Underline">
-        <fa-icon [icon]="underlineIcon"></fa-icon>
+        <i class="ri-underline"></i>
     </button>
     <button monaButton [selected]="strikeThroughSelected()" (click)="onStrikeThroughToggle()" title="Strikethrough">
-        <fa-icon [icon]="strikeThroughIcon"></fa-icon>
+        <i class="ri-strikethrough"></i>
     </button>
     <button monaButton [selected]="subscriptSelected()" (click)="onSubscriptToggle()" title="Subscript">
-        <fa-icon [icon]="subscriptIcon"></fa-icon>
+        <i class="ri-subscript"></i>
     </button>
     <button monaButton [selected]="superscriptSelected()" (click)="onSuperscriptToggle()" title="Superscript">
-        <fa-icon [icon]="superscriptIcon"></fa-icon>
+        <i class="ri-superscript"></i>
     </button>
 </mona-button-group>
