--- a/projects/mona-ui/src/lib/editor/components/editor-font-color/editor-font-color.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-color/editor-font-color.component.html
@@ -2,7 +2,7 @@
                    (ngModelChange)="onColorChange($event)" title="Color">
     <ng-template monaColorPickerValueTemplate let-color>
         <div class="mona-editor-font-color-value">
-            <fa-icon [icon]="fontIcon"></fa-icon>
+            <i class="ri-font-family"></i>
             <span class="mona-editor-font-color-preview" [style.background-color]="color"></span>
         </div>
     </ng-template>
