--- a/projects/mona-ui/src/lib/editor/components/editor-list/editor-list.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-list/editor-list.component.html
@@ -1,8 +1,8 @@
 <mona-button-group selection="single">
     <button monaButton [selected]="unorderedListSelected()" (click)="onUnorderedListToggle()" title="Insert unordered list">
-        <fa-icon [icon]="unorderedListIcon"></fa-icon>
+        <i class="ri-list-unordered"></i>
     </button>
     <button monaButton [selected]="orderedListSelected()" (click)="onOrderedListToggle()" title="Insert ordered list">
-        <fa-icon [icon]="orderedListIcon"></fa-icon>
+        <i class="ri-list-ordered-2"></i>
     </button>
 </mona-button-group>
