--- a/projects/mona-ui/src/lib/editor/components/editor-text-alignments/editor-text-alignments.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-text-alignments/editor-text-alignments.component.html
@@ -1,14 +1,14 @@
 <mona-button-group selection="single">
     <button monaButton [selected]="alignLeftSelected()" (click)="onAlignLeft()" title="Align text left">
-        <fa-icon [icon]="alignLeftIcon"></fa-icon>
+        <i class="ri-align-left"></i>
     </button>
     <button monaButton [selected]="alignCenterSelected()" (click)="onAlignCenter()" title="Center text">
-        <fa-icon [icon]="alignCenterIcon"></fa-icon>
+        <i class="ri-align-center"></i>
     </button>
     <button monaButton [selected]="alignRightSelected()" (click)="onAlignRight()" title="Align text right">
-        <fa-icon [icon]="alignRightIcon"></fa-icon>
+        <i class="ri-align-right"></i>
     </button>
     <button monaButton [selected]="alignJustifySelected()" (click)="onAlignJustify()" title="Justify">
-        <fa-icon [icon]="alignJustifyIcon"></fa-icon>
+        <i class="ri-align-justify"></i>
     </button>
 </mona-button-group>
