--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -13,5 +13,6 @@
     <mona-editor-indent></mona-editor-indent>
     <mona-editor-history></mona-editor-history>
     <mona-editor-horizontal-rule></mona-editor-horizontal-rule>
+    <mona-editor-image></mona-editor-image>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
