--- a/projects/mona-ui/src/lib/editor/components/editor-font-family/editor-font-family.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-family/editor-font-family.component.html
@@ -1,2 +1,6 @@
 <mona-drop-down-list [data]="editorService.fonts()" [ngModel]="selectedFontFamily()"
-                     (ngModelChange)="onFontFamilyChange($event)" title="Select font family"></mona-drop-down-list>
+                     (ngModelChange)="onFontFamilyChange($event)" title="Select font family">
+    <ng-template monaDropDownListItemTemplate let-font>
+        <span [style.font-family]="font">{{ font }}</span>
+    </ng-template>
+</mona-drop-down-list>
