--- a/projects/mona-ui/src/lib/editor/components/editor-font-highlight/editor-font-highlight.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-font-highlight/editor-font-highlight.component.html
@@ -1,7 +1,7 @@
 <mona-color-picker view="gradient"  [ngModel]="selectedColor()" (ngModelChange)="onColorChange($event)" title="Background color">
     <ng-template monaColorPickerValueTemplate let-color>
         <div class="mona-editor-font-highlight-value">
-            <fa-icon [icon]="highlightIcon"></fa-icon>
+            <i class="ri-drop-fill"></i>
             <span class="mona-editor-font-highlight-preview" [style.background-color]="color"></span>
         </div>
     </ng-template>
