--- a/projects/mona-ui/src/lib/editor/components/editor-horizontal-rule/editor-horizontal-rule.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-horizontal-rule/editor-horizontal-rule.component.html
@@ -1,3 +1,3 @@
-<button monaButton (click)="onHorizontalRuleClick()">
-    <fa-icon [icon]="horizontalRuleIcon"></fa-icon>
+<button monaButton (click)="onHorizontalRuleClick()" title="Add horizontal line">
+    <i class="ri-subtract-line"></i>
 </button>
