--- a/projects/mona-ui/src/lib/editor/components/editor-indent/editor-indent.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-indent/editor-indent.component.html
@@ -1,8 +1,8 @@
 <mona-button-group selection="single">
     <button monaButton [disabled]="indentDisabled()" (click)="onIndentClick()" title="Indent">
-        <fa-icon [icon]="indentIcon"></fa-icon>
+        <i class="ri-indent-increase"></i>
     </button>
     <button monaButton [disabled]="outdentDisabled()" (click)="onOutdentClick()" title="Outdent">
-        <fa-icon [icon]="outdentIcon"></fa-icon>
+        <i class="ri-indent-decrease"></i>
     </button>
 </mona-button-group>
