--- a/projects/mona-ui/src/lib/editor/components/editor-link/editor-link.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-link/editor-link.component.html
@@ -1,8 +1,8 @@
 <mona-button-group selection="single">
     <button monaButton [selected]="linkSelected()" (click)="onLinkDialogDisplay()" title="Insert Link">
-        <fa-icon [icon]="linkIcon"></fa-icon>
+        <i class="ri-link-m"></i>
     </button>
     <button monaButton [disabled]="unlinkDisabled()" (click)="onUnlinkClick()" title="Remove Link">
-        <fa-icon [icon]="unlinkIcon"></fa-icon>
+        <i class="ri-link-unlink-m"></i>
     </button>
 </mona-button-group>
