--- a/projects/mona-ui/src/lib/editor/components/editor-task-list/editor-task-list.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor-task-list/editor-task-list.component.html
@@ -1,3 +1,3 @@
 <button monaButton [selected]="taskSelected()" (click)="onTaskToggle()" title="Insert task list">
-    <fa-icon [icon]="taskIcon"></fa-icon>
+    <i class="ri-checkbox-fill"></i>
 </button>
