--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1,4 +1,5 @@
 @import '@angular/cdk/overlay-prebuilt.css';
+@import 'remixicon/fonts/remixicon.css';
 
 *,
 *::before,
@@ -760,7 +761,7 @@ mona-filter-input.mona-popup-filter-input,
 
 .mona-editor-container {
     background: var(--mona-background);
-    & div[contenteditable] {
+    & div:first-child[contenteditable='true'] {
         padding: 0.375rem;
         color: var(--mona-text);
         border: none;
@@ -800,6 +801,20 @@ mona-filter-input.mona-popup-filter-input,
     }
     & input[type="checkbox"] {
         margin-right: 0.5rem !important;
+    }
+}
+
+.mona-editor img {
+    max-width: 100%;
+    height: auto;
+    &.ProseMirror-selectednode {
+        outline: 3px solid var(--mona-primary);
+    }
+}
+
+.mona-editor .ProseMirror-gapcursor {
+    &:after {
+        border-color: var(--mona-text) !important;
     }
 }
 
