feat: initial editor table implementation

--- a/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
+++ b/projects/mona-ui/src/lib/editor/components/editor/editor.component.html
@@ -14,5 +14,6 @@
     <mona-editor-history></mona-editor-history>
     <mona-editor-horizontal-rule></mona-editor-horizontal-rule>
     <mona-editor-image></mona-editor-image>
+    <mona-editor-table></mona-editor-table>
 </div>
 <div class="mona-editor-container" #editorContainer></div>
