--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -818,6 +818,33 @@ mona-filter-input.mona-popup-filter-input,
     }
 }
 
+.mona-editor table {
+    border-collapse: collapse;
+    margin: 0;
+    overflow: hidden;
+    table-layout: fixed;
+    width: 100%;
+
+    & th, td {
+        border: 1px solid darkgray;
+        padding: 0.25rem;
+        vertical-align: top;
+        position: relative;
+    }
+
+    & .selectedCell:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        pointer-events: none;
+        z-index: 2;
+        background: var(--mona-primary);
+    }
+}
+
 /** Filters */
 .mona-filter-menu {
     width: 100%;
