feat: editor settings

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -809,7 +809,7 @@
                 <mona-tab title="Editor">
                     <ng-template monaTabContentTemplate>
                         <div style="padding: 10px;">
-                            <mona-editor></mona-editor>
+                            <mona-editor [settings]="editorSettings"></mona-editor>
                         </div>
                     </ng-template>
                 </mona-tab>
