--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -798,6 +798,14 @@ mona-filter-input.mona-popup-filter-input,
     & li {
         display: flex;
         padding: 0.125rem 0;
+        & > label {
+            flex: 0 0 auto;
+            margin-right: 0.5rem;
+            user-select: none;
+        }
+        & > div {
+            flex: 1 1 auto;
+        }
     }
     & input[type="checkbox"] {
         margin-right: 0.5rem !important;
