--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1461,6 +1461,7 @@ input[monaTextBox].mona-input-inner {
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
     transition: box-shadow 0.15s ease-in-out;
+    color: var(--mona-text);
     &:active, &:focus, &:focus-within {
         box-shadow: var(--mona-focus-shadow);
     }
@@ -1471,11 +1472,15 @@ input[monaTextBox].mona-input-inner {
             @include disabled;
         }
     }
-    & > [monaTextBox] {
-        border: none;
+    & > input {
         width: 100%;
-        &:active, &:focus, &:focus-within {
-            box-shadow: none;
+        height: 100%;
+        outline: none;
+        background-color: transparent;
+        padding: 0.25rem 0.5rem;
+        @include font-medium;
+        &[disabled] {
+            @include disabled;
         }
     }
     &.mona-disabled {
