fix: clicking on hsv rectangle of color gradient should now update the color immediately

--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.html
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.html
@@ -16,7 +16,7 @@
              [style.background-color]="lastSelectedColor()"></div>
     }
     <button monaButton [flat]="true" (click)="onClearClick()">
-        <fa-icon [icon]="clearIcon"></fa-icon>
+        <i class="ri-blur-off-line"></i>
     </button>
 </div>
 <div class="mona-color-gradient-inputs">
@@ -94,7 +94,7 @@
             <div class="mona-color-gradient-channel-switch">
                 <button monaButton [flat]="true" title="Switch color mode"
                         (click)="onSwitchColorModeClick()">
-                    <fa-icon [icon]="switchIcon"></fa-icon>
+                    <i class="ri-expand-up-down-line"></i>
                 </button>
             </div>
         </div>
@@ -108,7 +108,7 @@
                 <ng-template monaTextBoxSuffixTemplate>
                 <span class="mona-color-gradient-hex-input-suffix">
                     <button monaButton [flat]="true" title="Copy color" #copyButton>
-                        <fa-icon [icon]="copyIcon"></fa-icon>
+                        <i class="ri-file-copy-line"></i>
                     </button>
                     <mona-contextmenu [target]="copyButton" trigger="click">
                         <mona-menu-item text="Copy as HEX" (menuClick)="onCopyColorSelect('hex')"></mona-menu-item>
