--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.scss
@@ -47,7 +47,7 @@
     width: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 .mona-color-gradient-values {
@@ -85,7 +85,7 @@
 }
 
 mona-numeric-text-box {
-    width: 72px;
+    width: 75px;
 }
 
 .mona-color-gradient-value-input-prefix {
