fix: do not modify tree on drag and drop; leave it to user to mutate the data

--- a/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/tree/tree.component.html
@@ -1,4 +1,4 @@
-<mona-sub-tree [nodes]="treeService.viewNodeSet()" [parent]="null" [depth]="0"></mona-sub-tree>
+<mona-sub-tree [nodes]="treeService.viewNodeSet()" [parent]="null" [depth]="0" [@.disabled]="treeService.animationTemporarilyDisabled()"></mona-sub-tree>
 @if ((treeService.dragging$|async) && (treeService.nodeDrag$|async)?.dropAllowed) {
     <mona-tree-drop-hint></mona-tree-drop-hint>
 }
