refactor: icon refactors

--- a/projects/mona-ui/src/lib/common/filter-input/components/filter-input/filter-input.component.html
+++ b/projects/mona-ui/src/lib/common/filter-input/components/filter-input/filter-input.component.html
@@ -4,7 +4,7 @@
                (ngModelChange)="filter$.next($event)">
     <ng-template monaTextBoxPrefixTemplate>
         <div class="mona-filter-input-icon">
-            <fa-icon [icon]="filterIcon"></fa-icon>
+            <i class="ri-search-line"></i>
         </div>
     </ng-template>
 </mona-text-box>
