--- a/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/text-box/components/text-box/text-box.component.html
@@ -16,7 +16,7 @@
 
 @if (clearButton() && value().length !== 0) {
     <button monaButton [flat]="true" [tabindex]="-1" title="Clear" (click)="onClearClick()">
-        <fa-icon [icon]="clearIcon"></fa-icon>
+        <i class="ri-close-line"></i>
     </button>
 }
 
