More work on virtual scroll for grid

--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -7,6 +7,7 @@
 .mona-grid-cell {
     display: flex;
     align-items: center;
+    flex: 1;
     overflow: hidden;
     padding: 0.375rem 0.6875rem;
     outline: none;
