--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -1,20 +1,12 @@
 <div class="mona-grid-list-wrap">
     <table>
-        <colgroup>
-            @for (_ of gridService.groupColumns(); track $index) {
-                <col style="width: 34px;">
-            }
-            @for (column of columns(); track $index) {
-                <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
-            }
-        </colgroup>
         <tbody>
             @if (gridService.groupColumns().length === 0) {
                 @for (row of data(); track row.uid) {
                     <tr (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected()}"
                         [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                         @for (column of columns(); track $index) {
-                            <td>
+                            <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
                                 <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                             </td>
                         }
@@ -26,7 +18,7 @@
                             @for (subGroup of groupItem; track $index) {
                                 <tr class="mona-grid-grouping-row">
                                     @for (_ of gridService.groupColumns()|monaSlice:0:cx; track $index) {
-                                        <td></td>
+                                        <td [style.width.px]="34"></td>
                                     }
                                     @if (subGroup.rows.length > 0) {
                                         <td [colSpan]="columns().length + gridService.groupColumns().length">
