--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -2,7 +2,6 @@ table {
     border-collapse: collapse;
     width: 100%;
     height: 100%;
-    table-layout: fixed;
 
     & tbody {
         text-align: left;
@@ -20,10 +19,12 @@ table {
         &:not(:last-child) {
             border-bottom: 1px solid var(--mona-border-color);
         }
+        display: flex;
     }
 
     & td {
         position: relative;
+        display: flex;
         &:not(:last-child) {
             border-right: 1px solid var(--mona-border-color);
         }
