--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -29,6 +29,7 @@
         table-layout: fixed;
         & tr {
             position: relative;
+            display: flex;
         }
         & th {
             white-space: nowrap;
@@ -44,7 +45,7 @@
     }
 }
 
-mona-grid-list {
+mona-grid-list, mona-grid-virtual-list {
     border-top: 1px solid var(--mona-border-color);
 }
 
