--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -8,6 +8,7 @@ table {
     }
 
     & tr {
+        display: inline-flex;
         &:nth-child(even) {
             background-color: var(--mona-background-dark);
         }
@@ -19,7 +20,6 @@ table {
         &:not(:last-child) {
             border-bottom: 1px solid var(--mona-border-color);
         }
-        display: flex;
     }
 
     & td {
@@ -32,8 +32,21 @@ table {
 }
 
 .mona-grid-grouping-row {
+    width: 100%;
+    & > td {
+        display: flex;
+        align-items: center;
+    }
     & > td:last-child {
         padding: 0;
+    }
+}
+
+.mona-grid-grouping-toggle-wrapper {
+    border-right: 1px solid var(--mona-border-color);
+    display: inline-flex;
+    & button {
+        width: 100%;
     }
 }
 
