--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -18,18 +18,20 @@
                             @for (subGroup of groupItem; track $index) {
                                 <tr class="mona-grid-grouping-row">
                                     @for (_ of gridService.groupColumns()|monaSlice:0:cx; track $index) {
-                                        <td [style.width.px]="34"></td>
+                                        <td [style.width.px]="gridService.groupColumnWidth"></td>
                                     }
                                     @if (subGroup.rows.length > 0) {
-                                        <td [colSpan]="columns().length + gridService.groupColumns().length">
-                                            <button monaButton [flat]="true" style="width: 34px;"
-                                                    (click)="onGroupExpandChange(subGroup)">
+                                        <td  [style.width.px]="gridService.groupColumnWidth*(columns().length + gridService.groupColumns().length)">
+                                            <span class="mona-grid-grouping-toggle-wrapper" [style.width.px]="gridService.groupColumnWidth">
+                                                <button monaButton [flat]="true"
+                                                        (click)="onGroupExpandChange(subGroup)">
                                                 @if (subGroup.collapsed) {
                                                     <fa-icon [icon]="expandIcon"></fa-icon>
                                                 } @else {
                                                     <fa-icon [icon]="collapseIcon"></fa-icon>
                                                 }
                                             </button>
+                                            </span>
                                             <span class="mona-grid-grouping-row-text">{{ column.title() }}: {{ subGroup.rows[0].data[column.field()] }}</span>
                                         </td>
                                     }
@@ -45,10 +47,10 @@
                                             [ngClass]="{'mona-selected': row.selected()}"
                                             [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                                             @for (_ of gridService.groupColumns(); track $index) {
-                                                <td></td>
+                                                <td [style.width.px]="gridService.groupColumnWidth"></td>
                                             }
                                             @for (column of columns(); track $index) {
-                                                <td>
+                                                <td [style.width.px]="column.calculatedWidth()">
                                                     <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                                                 </td>
                                             }
