--- a/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.html
@@ -2,16 +2,54 @@
     <cdk-virtual-scroll-viewport [itemSize]="30" [style.height.%]="100">
         <table style="height: 100%;">
             <tbody>
-                <ng-container *cdkVirtualFor="let row of data(); let $index=index">
-                    <tr [ngClass]="{'mona-selected': row.selected()}"
-                        [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
-                        @for (column of columns(); track $index) {
-                            <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
-                                <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
-                            </td>
+                @if (gridService.groupColumns().length === 0) {
+                    <ng-container *cdkVirtualFor="let row of data(); let $index=index">
+                        <tr [ngClass]="{'mona-selected': row.selected()}"
+                            [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
+                            @for (column of columns(); track $index) {
+                                <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
+                                    <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
+                                </td>
+                            }
+                        </tr>
+                    </ng-container>
+                } @else {
+                    <ng-container *cdkVirtualFor="let rowItem of virtualGridRows()">
+                        @if (rowItem.type==='group') {
+                            <tr class="mona-grid-grouping-row">
+                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level+1; track $index) {
+                                    <td [style.width.px]="gridService.groupColumnWidth">
+                                        @if ($index === rowItem.level) {
+                                            <span class="mona-grid-grouping-toggle-wrapper" [style.width.px]="gridService.groupColumnWidth">
+                                            <button monaButton [flat]="true" (click)="onGroupExpandChange(rowItem)">
+                                                @if (collapsedGroups()|monaContains:rowItem.groupId) {
+                                                    <fa-icon [icon]="expandIcon"></fa-icon>
+                                                } @else {
+                                                    <fa-icon [icon]="collapseIcon"></fa-icon>
+                                                }
+                                            </button>
+                                        </span>
+                                        }
+                                    </td>
+                                }
+                                <td [style.width.px]="gridService.groupColumnWidth*(columns().length + gridService.groupColumns().length)">
+                                    <span class="mona-grid-grouping-row-text">{{ rowItem.column.title() }}: {{ rowItem.groupTitle }}</span>
+                                </td>
+                            </tr>
+                        } @else {
+                            <tr>
+                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level+1; track $index) {
+                                    <td [style.width.px]="gridService.groupColumnWidth"></td>
+                                }
+                                @for (column of columns(); track $index) {
+                                    <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
+                                        <mona-grid-cell [column]="column" [row]="rowItem.row"></mona-grid-cell>
+                                    </td>
+                                }
+                            </tr>
                         }
-                    </tr>
-                </ng-container>
+                    </ng-container>
+                }
             </tbody>
         </table>
     </cdk-virtual-scroll-viewport>
